--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "jose": "^5.2.3",
     "next": "14.1.4",
     "react": "^18",
